# Cortexia

./: .gitignore  CMakeLists.txt  README.md
Source/: PluginEditor.cpp  PluginProcessor.cpp  PluginProcessor.h  pluginEditor.h
plugin-ui/: index.html  package-lock.json  package.json
